--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,13 @@
 <div class="container-fluid text-center welcome-page">
-  <div class="row text-center main_image">
-    <h1 class="title"> UNLEASH </h1>
-    <p class="tag-line"> GET OUT AND PLAY </p>
-    <%= link_to("GET STARTED", "/auth/facebook", class: "login")  %>
-  </div>
-  <div class="row text-center intro-quote">
-    <p> We all have busy schedules, and days can run late which means long days for our pets stuck at home.
-      Unleash connects you and your pet with others in your community! Setup play dates, find a walking buddy, or take turns
-      dog sitting with a neighbor when you are gone on busines trips. Win for you, win for your neighbor, and most importantly a win for your pet! </p>
+  <div class="text-center main-image">
+    <div class="row">
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <h1 class="title"> UNLEASH </h1>
+        <p class="tag-line"> GET OUT AND PLAY </p>
+        <%= link_to("GET STARTED", "/auth/facebook", class: "login")  %>
+      </div>
+    </div>
   </div>
   <div class="row site-description">
     <div class="col-md-2"></div>
