--- a/app/assets/stylesheets/new_dog.css.sass
+++ b/app/assets/stylesheets/new_dog.css.sass
@@ -4,12 +4,16 @@ $link-color:       $light_lime
 $link-hover-color: darken($link-color, 30%)
 
 .dog-form
-  margin: 100px
+  margin: 300px
   margin-top: 20px
   padding: 100px
+  padding-top: 20px
+  padding-bottom: 30px
   color: white
   font-size: 20px
   background: grey
+  border-radius: 10px
+
 
 img.img-circle.img-thumbnail.home-image
   height: 150px
