--- a/app/assets/stylesheets/new_dog.css.sass
+++ b/app/assets/stylesheets/new_dog.css.sass
@@ -1,14 +1,53 @@
 $light_lime: #e9f198
-$teal: #5E8D9C
 $link-color:       $light_lime
 $link-hover-color: darken($link-color, 30%)
+$red: #C42636
+$mygrey: #d0d0d0
+
+.welcome-msg
+  margin-left: -55px
+  margin-top: 35px
+
+.user_profile
+  margin-top: 20px
+
+.no-bottom-margin
+  margin-bottom: 0px
+
+.dog_name
+  margin-top: 100px
+
+.red-paw
+  margin: 250px 20px 0px 0px
+  color: lighten($red, 15%)
+  font-size: 70px
+
+.green-paw
+  margin-top: 250px
+  color: darken($light_lime, 10%)
+  font-size: 70px
+
+#paw-btn
+  background: white
+  padding: 0px
+  border-style: none
+
+.dog-profile
+  height: 600px
+  margin: -5px 0px 0px -10px
+  padding-bottom: 10px
+  background: lighten($mygrey, 10%)
+
+.dog-profile h4
+  line-height: 80%
+
+.grey-font
+  margin-top: 40px
+  color: darken($mygrey, 10px)
 
 .dog-form
-  margin: 300px
-  margin-top: 20px
-  padding: 100px
-  padding-top: 20px
-  padding-bottom: 30px
+  margin: 20px 300px 300px 300px
+  padding: 20px 100px 30px 100px
   color: white
   font-size: 20px
   background: grey
@@ -17,4 +56,9 @@ $link-hover-color: darken($link-color, 30%)
 
 img.img-circle.img-thumbnail.home-image
   height: 150px
-  margin-bottom: 50px
+  margin-bottom: 20px
+
+img.owner-img.img-circle.home-image
+  height: 50px
+  border: 1px solid white
+  margin: 4px
