--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -4,7 +4,7 @@
   <% if @matches == 0 %>
   <h1> No matches at this time, keep on <%= link_to "searching", new_observation_path %>! </h1>
   <% else %>
-  <h1><%= image_tag current_user.dogs.last.img.url, class: "img-responsive img-circle img-thumbnail home-image" %> Matches for <%= current_user.dogs.last.name %>! <h1>
+  <h1><%= image_tag current_user.dogs.first.img.url, class: "img-responsive img-circle img-thumbnail home-image" %> Matches for <%= current_user.dogs.first.name %>! <h1>
     <% @matches.each do |match| %>
     <div class="col-md-4">
       <h1 class="dog_name"><%=match.name%></h1>
