update new dog form

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -15,18 +15,16 @@ $red: #C42636
 $seafoam: #daede2
 
 .top-nav
-  padding-right: 15px
+  padding: 15px
 
-#logout
-  color: white
-
-#matches
+#white
   color: white
 
 a.dropdown-toggle
   color: $light_lime
 
 .navbar-default
+  padding: 10px
   background-color: #8b8b8b
 
 .navbar
