--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -18,7 +18,7 @@ $teal: #5E8D9C
   margin: 20px
   margin-bottom: 0px
   margin-top: 150px
-  border-bottom: 2px solid $light_lime
+  border-bottom: 2px solid $teal
   color: white
 
 .tag-line
@@ -30,7 +30,7 @@ $teal: #5E8D9C
 .login
   margin: 15px
   font-size: 20px
-  color: lighten($red, 15%)
+  color: white
   text-decoration: none
   padding: 7px
   border: 3px solid
