--- a/app/views/observations/new.html.erb
+++ b/app/views/observations/new.html.erb
@@ -2,16 +2,16 @@
 
 <div class="container-fluid text-center show-container">
   <div class="dog-profile col-md-3">
-    <h3> <%= @observer.name %></h3>
-    <%= image_tag @observer.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
-    <h4 class="no-bottom-margin no-top-margin"> <%= @observer.city %> &middot <%= @observer.gender %> &middot <%= @observer.breed %></h4>
-    <h4 class="no-top-margin"> <%= @observer.weight %> lbs &middot <%= @observer.age %> yrs</h4>
+    <h3> <%= current_dog.name %></h3>
+    <%= image_tag current_dog.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
+    <h4 class="no-bottom-margin no-top-margin"> <%= current_dog.city %> &middot <%= current_dog.gender %> &middot <%= current_dog.breed %></h4>
+    <h4 class="no-top-margin"> <%= current_dog.weight %> lbs &middot <%= current_dog.age %> yrs</h4>
   </div>
   <div class=" col-md-9">
     <div class="col-md-3"></div>
     <div class="col-md-1 text-right red-paw">
       <%= bootstrap_form_for [@observation], :html => { multipart: true }  do |f| %>
-      <%= f.hidden_field :observer_id, :value => @observer.id %>
+      <%= f.hidden_field :dog_id, :value => current_dog.id %>
       <%= f.hidden_field :observed_id, :value => @observed.id %>
       <%= f.hidden_field :liked, :value => false%>
       <button id="paw-btn">
@@ -28,8 +28,8 @@
     </div>
     <div class="col-md-1 text-left green-paw">
       <%= bootstrap_form_for [@observation], :html => { multipart: true }  do |f| %>
-      <%= f.hidden_field :observer_id, :value => @observer.id %>
-      <%= f.hidden_field :observed_id, :value => @observed.id %>
+      <%= f.hidden_field :dog_id, :value => current_dog.id %>
+      <%= f.hidden_field :observed_id, :value =>current_dog.id %>
       <%= f.hidden_field :liked, :value => true %>
       <button id="paw-btn" >
         <i class="fa fa-paw "></i>
