--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,10 +2,10 @@
 
 <div class="container-fluid text-center show-container">
   <div class="dog-profile">
-    <h3> <%= @observer.name %></h3>
-    <%= image_tag @observer.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
-    <h4 class="no-bottom-margin"> <%= @observer.city %> &middot <%= @observer.gender %> &middot <%= @observer.breed %></h4>
-    <h4 class="no-top-margin"> <%= @observer.weight %> lbs &middot <%= @observer.age %> yrs</h4>
+    <h3> <%= @current_dog.name %></h3>
+    <%= image_tag @current_dog.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
+    <h4 class="no-bottom-margin"> <%= @current_dog.city %> &middot <%= @current_dog.gender %> &middot <%= @current_dog.breed %></h4>
+    <h4 class="no-top-margin"> <%= @current_dog.weight %> lbs &middot <%= @current_dog.age %> yrs</h4>
   </div>
   <div class="row col-md-12">
     <div class="col-md-3"></div>
@@ -14,7 +14,7 @@
     <div>
       <h1 class="dog_name"><%=@observed.name%></h1>
       <%= bootstrap_form_for [@observation], :html => { multipart: true }  do |f| %>
-      <%= f.hidden_field :observer_id, :value => @observer.id %>
+      <%= f.hidden_field :observer_id, :value => @current_dog.id %>
       <%= f.hidden_field :observed_id, :value => @observed.id %>
       <%= f.hidden_field :liked, :value => false%>
       <%= f.submit "Dislike" %>
@@ -27,7 +27,7 @@
     </div>
     <div class="col-md-1 text-left green-paw">
       <%= bootstrap_form_for [@observation], :html => { multipart: true }  do |f| %>
-      <%= f.hidden_field :observer_id, :value => @observer.id %>
+      <%= f.hidden_field :observer_id, :value => @current_dog.id %>
       <%= f.hidden_field :observed_id, :value => @observed.id %>
       <%= f.hidden_field :liked, :value => true %>
       <%= f.submit <i class="fa fa-paw"></i> %>
