--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -9,10 +9,13 @@
     <div class="col-md-4">
       <h1 class="dog_name"><%=match.name%></h1>
       <%= image_tag match.img.url, class: "img-responsive match img-circle img-thumbnail" %>
-      <h4 class="no-bottom-margin"> <%=match.city %> &middot <%=match.gender%> &middot <%=match.breed%></h4>
-      <h4 class="no-top-margin"> <%= match.weight %> lbs &middot <%=match.age%> yrs</h4>
-      <h4 class="grey-font"> Set up a date! Contact: <%= match.user.email %><h4>
+      <h4 class="no-bottom-margin"> <%=match.gender%> | <%=match.breed%></h4>
+      <h4 class="no-bottom-margin"> <%=match.location.distance_to(current_dog.location).round(1) %> miles away </h4>
+      <h4 class="no-bottom-margin"> </h4>
+      <h4 class="no-top-margin"> <%= match.weight %></h4>
+      <h4 class="no-top-margin"> <%=match.age%></h4>
       <h4 class="grey-font"> Owned by <%= match.user.first_name %> <%= image_tag match.user.image_url, class: "img-circle home-image owner-img" %><h4>
+      <h4 class="grey-font"> Email: <%= match.user.email %><h4>
     </div>
     <% end %>
   <% end %>
