--- a/app/assets/stylesheets/new_dog.css.sass
+++ b/app/assets/stylesheets/new_dog.css.sass
@@ -93,3 +93,8 @@ img.intro-img.img-circle.home-image
   height: 125px
   border: .5px solid white
   margin: 15px
+
+img.match.img-circle.home-image
+  height: 75px
+  border: .5px solid white
+  margin: 15px
