--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -8,9 +8,9 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li> <%=link_to "SEARCH", new_observation_path, id: "white" %></li>
-        <li> <%=link_to "MATCHES (#{matches.count})" , new_observation_path, id: "white" %></li>
+        <li> <%=link_to "MATCHES (#{matches.count})" , matches_path, id: "white" %></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" id="white" data-toggle="dropdown" role="button" aria-expanded="false">Acount Profile <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" id="white" data-toggle="dropdown" role="button" aria-expanded="true">Acount Profile <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
