update new observation

--- a/app/views/observations/new.html.erb
+++ b/app/views/observations/new.html.erb
@@ -4,8 +4,9 @@
   <div class="dog-profile col-md-3">
     <h3> <%= current_dog.name %></h3>
     <%= image_tag current_dog.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
-    <h4 class="no-bottom-margin no-top-margin"> <%= current_dog.city %> &middot <%= current_dog.gender %> &middot <%= current_dog.breed %></h4>
-    <h4 class="no-top-margin"> <%= current_dog.weight %> lbs &middot <%= current_dog.age %> yrs</h4>
+    <h4 class="no-bottom-margin"> <%=current_dog.gender%> | <%=current_dog.breed%></h4>
+    <h4 class="no-top-margin"> <%= current_dog.weight %></h4>
+    <h4 class="no-top-margin"> <%=current_dog.age%></h4>
   </div>
   <div class=" col-md-9">
     <div class="col-md-3"></div>
@@ -22,8 +23,10 @@
     <div class="col-md-4">
       <h1 class="dog_name"><%=@observed.name%></h1>
       <%= image_tag @observed.img.url, class: "img-responsive match img-circle img-thumbnail" %>
-      <h4 class="no-bottom-margin"> <%=@observed.city %> &middot <%=@observed.gender%> &middot <%=@observed.breed%></h4>
-      <h4 class="no-top-margin"> <%= @observed.weight %> lbs &middot <%=@observed.age%> yrs</h4>
+      <h4 class="no-bottom-margin"> <%= @observed.gender%> | <%= @observed.breed%></h4>
+      <h4 class="no-bottom-margin"> <%= @observed.location.distance_to(current_dog.location).round(1) %> miles away </h4>
+      <h4 class="no-top-margin"> <%=  @observed.weight %></h4>
+      <h4 class="no-top-margin"> <%= @observed.age%></h4>
       <h4 class="grey-font"> Owned by <%= @observed.user.first_name %> <%= image_tag @observed.user.image_url, class: "img-circle home-image owner-img" %><h4>
     </div>
     <div class="col-md-1 text-left green-paw">
