update homepage and dog form

--- a/app/assets/stylesheets/new_dog.css.sass
+++ b/app/assets/stylesheets/new_dog.css.sass
@@ -42,7 +42,7 @@ $teal: #5E8D9C
   font-size: 17px
 
 .form-margin
-  margin: 50px 100px 50px 100px
+  margin: 50px 80px 50px 80px
 
 .dog-profile
   height: 600px
@@ -82,12 +82,17 @@ $teal: #5E8D9C
 
 img.img-circle.img-thumbnail.home-image
   height: 150px
-  margin-bottom: 20px
+  margin: 0px 10px 0px 10px
 
 img.owner-img.img-circle.home-image
   height: 50px
   border: 1px solid white
   margin: 4px
+
+img.img-circle.img-thumbnail.home
+  height: 250px
+  border: 1px solid white
+  margin: 4px 4px 30px 4px
 
 img.intro-img.img-circle.home-image
   height: 125px
