--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -2,30 +2,55 @@ $red: #C42636
 $light_lime: #e9f198
 $teal: #5E8D9C
 
-.welcome-page
+.container-fluid
+  padding: 0px !important
 
 .main-image
-  margin: -15px
-  height: 800px
+  height: 600px
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(/assets/unleash_crop.png) no-repeat center center fixed
   -webkit-background-size: cover
   -moz-background-size: cover
   -o-background-size: cover
-  background-size: cover
 
-.title
+.reviews
+  margin-top: 50px
+  padding: 80px 20px 60px 0px
+  background: lighten($teal, 25%)
+
+.reviews-again
+  padding: 100px 20px 100px 0px
+  background: lighten($teal, 20%)
+
+.more-reviews
+  padding: 20px
+  background: white
+  border-top: 1px solid grey
+
+.site-title
   font-size: 72px
   margin: 20px
   margin-bottom: 0px
-  margin-top: 150px
-  border-bottom: 2px solid $teal
+  margin-top: 140px
+  border-bottom: 3px solid $light_lime
   color: white
 
-.tag-line
+.better
+  margin-bottom: 20px
+
+.site-tag-line
   margin-top: 0px
   margin-bottom: 50px
   font-size: 20px
   color: white
+
+.site-descriptions
+  margin-top: 20px
+  padding: 20px
+  background: white
+
+.review
+  color: white
+  padding: 30px
 
 .login
   margin: 15px
@@ -52,9 +77,6 @@ $teal: #5E8D9C
 .glyphicon
   font-size: 16px
 
-.site-description
-  margin: 50px
-
 .desc p
   margin-top: 25px
   margin-bottom: 25px
@@ -67,3 +89,7 @@ $teal: #5E8D9C
 
 .marker
   color: $teal
+
+.better
+  margin-bottom: 35px
+  color: grey
