--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -7,7 +7,7 @@
 
 <%= link_to "x", root_path, class:"btn btn-default cancel" %>
 <%= bootstrap_form_for [@dog],  :html => { multipart: true }  do |f| %>
-<h3 class="text-center"> About your pup: </h3><p class="text-center"> Tell us about your Furry Friend! </p>
+<h3 class="text-center"> Your Pup! </h3><p class="text-center"> What makes them who they are?  </p>
 <div class="section">
 <%= f.text_field :name, hide_label: true, placeholder: "Name"  %>
 <%= f.select :breed, ["Breed", "Poodle", "Lab"], hide_label: true  %>
@@ -16,21 +16,19 @@
 <%= f.select :gender, ["Gender", "Male", "Female"], hide_label: true %>
 </br>
 </div>
-<h3 class="text-center"> Address: </h3>
-<p class="text-center"><em>We are about your privacy! We will not share your address. </em> </p>
-<div class="section">
-<%= f.text_field :street, hide_label: true, placeholder: "Street" %>
-<%= f.text_field :city, hide_label: true, placeholder: "City" %>
-<%= f.select :state, states, { hide_label: true, placeholder: "State"  } %>
-<%= f.text_field :zipcode, hide_label: true, placeholder: "Zipcode" %>
-<%= f.hidden_field :user_id, :value => current_user.id %>
+<h3 class="text-center"> Where do you play? </h3>
+<p class="text-center"><em>We are about your privacy! We will not share your location. </em> </p>
+  <div class="col-md-push-3 col-md-3 section">
+    <%= f.text_field :zipcode, hide_label: true, placeholder: "Zipcode" %>
+    <%= f.hidden_field :user_id, :value => current_user.id %>
+  </div>
+  <div class="col-md-6"></div>
 </br>
-</div>
-<div class = "form-margin">
-  <h3 class="text-center"> Profile Image:</h3><p class="text-center"> So many cute pictures to choose from! </p>
-  <div class="row">
-    <div class="col-md-3"></div>
-    <div class="col-md-6 form-section text-center">
+  <div class = "form-margin">
+    <div class="row">
+    <h3 class="text-center"> Profile Image:</h3><p class="text-center"> So many cute pictures to choose from! </p>
+      <div class="col-md-3"></div>
+      <div class="col-md-6 form-section text-center">
       <%= f.file_field :img, :label => "Select Image to Upload ", class: "file"%> </br>
     </div>
   </div>
