--- a/app/assets/stylesheets/new_dog.css.sass
+++ b/app/assets/stylesheets/new_dog.css.sass
@@ -20,15 +20,15 @@ $teal: #5E8D9C
   margin-bottom: 0px
 
 .dog_name
-  margin-top: 100px
+  margin-top: 50px
 
 .red-paw
-  margin: 250px 20px 0px 0px
+  margin: 200px 20px 0px 0px
   color: lighten($red, 15%)
   font-size: 70px
 
 .green-paw
-  margin-top: 250px
+  margin-top: 200px
   color: darken($light_lime, 10%)
   font-size: 70px
 
@@ -44,10 +44,15 @@ $teal: #5E8D9C
 .form-margin
   margin: 50px 80px 50px 80px
 
-.dog-profile
+.file
+  margin-left: 35px
+
+.dog-profile.col-md-3
   height: 600px
-  padding-bottom: 10px
   border-right: 3px solid lighten($mygrey, 12%)
+  background: lighten($mygrey, 17%)
+  padding: 0px
+
 
 .dog-profile h4
   line-height: 80%
@@ -80,6 +85,9 @@ $teal: #5E8D9C
   padding: 20px
   color: white
 
+.index
+  padding: 60px
+
 img.img-circle.img-thumbnail.home-image
   height: 150px
   margin: 0px 10px 0px 10px
@@ -99,7 +107,7 @@ img.intro-img.img-circle.home-image
   border: .5px solid white
   margin: 15px
 
-img.match.img-circle.home-image
-  height: 75px
+img.img-circle.img-thumbnail.match
+  height: 225px
   border: .5px solid white
   margin: 15px
