--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,7 +35,7 @@
     </div>
       <div class="row reviews text-center">
         <div class="col-md-push-1 col-md-3">
-          <%= image_tag Dog.last.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
+          <#%= image_tag Dog.last.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
         </div>
         <div class="col-md-8">
           <h2 class="review"> "Schedules get busy, but why should our pets pay the price? I've met some awesome neighbors, and Rocko has met some great friends! We love getting together after work and letting them wear each other out!" - Krista </h2>
@@ -47,10 +47,10 @@
       <div class="col-md-2"></div>
       <div class="col-md-8 better">
         <h4> Life is Better with Friends </h4>
-        <%= image_tag Dog.first.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
-        <%= image_tag Dog.find(10).img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
-        <%= image_tag Dog.find(19).img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
-        <%= image_tag Dog.last.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
+        <#%= image_tag Dog.first.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
+        <#%= image_tag Dog.find(10).img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
+        <#%= image_tag Dog.find(19).img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
+        <#%= image_tag Dog.last.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
       </div>
     </div>
   </div>
