--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>UnleashApp</title>
+  <title>Unleash</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= yield %>
+  <%= render :partial => "/shared/footer"%>
 </body>
-<%= render :partial => "/shared/footer"%>
 </html>
