--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,17 +9,11 @@
       <ul class="nav navbar-nav navbar-right">
         <li> <%=link_to "SEARCH", new_observation_path, id: "white" %></li>
         <li> <%=link_to "MATCHES (#{matches.count})" , matches_path, id: "white" %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" id="white" data-toggle="dropdown" role="button" aria-expanded="true">Acount Profile <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
+        <li> <%= link_to "LOGOUT", logout_path, method: :delete, id: "white" %></li>
+        <li class="active" id="white"><%= image_tag current_user.image_url,
+            class: "img-circle home-image owner-img" %>
+            <span class="sr-only">(current)</span>
         </li>
-        <li class="active" id="white"><%= image_tag current_user.image_url, class: "img-circle home-image owner-img" %> <span class="sr-only">(current)</span></li>
       </ul>
     </div>
   </div>
