--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,10 +1,17 @@
 <%= render :partial => '/shared/nav'%>
 
 <div class="container-fluid text-center show-container">
-  <% if @matches == 0 %>
-  <h1> No matches at this time, keep on
-    <%= link_to "searching", new_observation_path %>!
-  </h1>
+  <% if @matches.count == 0 %>
+  <h1 ><%= image_tag current_user.dogs.first.img.url,
+  class: "img-responsive img-circle img-thumbnail match" %>
+  Matches for
+  <%= current_user.dogs.first.name %>!
+  <h1>
+    <div class="dog-form">
+      <h1> No matches at this time, keep on
+        <%= link_to "searching", new_observation_path, id: "white" %>!
+      </h1>
+    </div>
   <% else %>
   <h1><%= image_tag current_user.dogs.first.img.url,
           class: "img-responsive img-circle img-thumbnail match" %>
