--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -50,7 +50,7 @@
         <%= image_tag Dog.first.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
         <%= image_tag Dog.find(10).img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
         <%= image_tag Dog.find(19).img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
-        <%= image_tag Dog.last.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
+        <%= image_tag Dog.find(7).img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
       </div>
     </div>
   </div>
