--- a/app/views/observations/index.html.erb
+++ b/app/views/observations/index.html.erb
@@ -8,7 +8,7 @@
       <h3> How it works... </h3>
         <%= link_to "Skip the explanation, I want to get searching!", new_observation_path%>
       <h3>picture goes here</h3>
-      <img src="http://loremflickr.com/300/300/puppy"/>
+      <img src='/assets/example.png' id="example"/>
         <p>then long explanation...</p>
     <%= link_to "Got it! Let's begin searching!", new_observation_path, class: "btn btn-lg" %>
 </div>
