--- a/app/assets/stylesheets/new_dog.css.sass
+++ b/app/assets/stylesheets/new_dog.css.sass
@@ -111,3 +111,7 @@ img.img-circle.img-thumbnail.match
   height: 225px
   border: .5px solid white
   margin: 15px
+
+#example
+  height: 350px
+  border: 5px solid grey
