update explanation view

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-push-4 col-md-4">
         <h1 class="site-title"> UNLEASH </h1>
-        <p class="site-tag-line"> PLATDATES FOR YOUR DOG</p>
+        <p class="site-tag-line"> PLAYDATES FOR YOUR DOG</p>
         <%= link_to("GET STARTED", "/auth/facebook", class: "login")  %>
       </div>
     </div>
