--- a/app/assets/stylesheets/footer.css.sass
+++ b/app/assets/stylesheets/footer.css.sass
@@ -21,3 +21,6 @@ $link-hover-color: darken($link-color, 30%)
   &:hover
     color: $link-hover-color
     text-decoration: underline
+
+a.next
+  color
