--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,10 +35,10 @@
     </div>
       <div class="row reviews text-center">
         <div class="col-md-push-1 col-md-3">
-          <%= image_tag Dog.last.img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
+          <%= image_tag Dog.find(299).img.url, class: "img-responsive img-circle img-thumbnail home-image" %>
         </div>
         <div class="col-md-8">
-          <h2 class="review"> "Schedules get busy, but why should our pets pay the price? I've met some awesome neighbors, and Rocko has met some great friends! We love getting together after work and letting them wear each other out!" - Krista </h2>
+          <h2 class="review"> "My schedule gets busy fast, but why should my pet pay the price? I've met some awesome neighbors, and Rocko has met some great friends! We love getting together after work and letting them wear each other out!" - Krista </h2>
         </div>
       </div>
     </div>
