refactor welcome page

--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -12,20 +12,6 @@ $teal: #5E8D9C
   -moz-background-size: cover
   -o-background-size: cover
 
-.reviews
-  margin-top: 50px
-  padding: 80px 20px 60px 0px
-  background: lighten($teal, 25%)
-
-.reviews-again
-  padding: 100px 20px 100px 0px
-  background: lighten($teal, 20%)
-
-.more-reviews
-  padding: 20px
-  background: white
-  border-top: 1px solid grey
-
 .site-title
   font-size: 72px
   margin: 20px
@@ -34,23 +20,11 @@ $teal: #5E8D9C
   border-bottom: 3px solid $light_lime
   color: white
 
-.better
-  margin-bottom: 20px
-
 .site-tag-line
   margin-top: 0px
   margin-bottom: 50px
   font-size: 20px
   color: white
-
-.site-descriptions
-  margin-top: 20px
-  padding: 20px
-  background: white
-
-.review
-  color: white
-  padding: 30px
 
 .login
   margin: 15px
@@ -65,14 +39,10 @@ $teal: #5E8D9C
     color: lighten($red, 5%)
     text-decoration: none
 
-.intro-quote
-  background: rgba(0, 0, 0, .7)
-  margin-top: 350px
-  margin-bottom: 50px
-  padding: 50px
-  font-size: 26px
-  font-style: italic
-  color: white
+.site-descriptions
+  margin-top: 20px
+  padding: 20px
+  background: white
 
 .glyphicon
   font-size: 16px
@@ -90,6 +60,15 @@ $teal: #5E8D9C
 .marker
   color: $teal
 
-.better
+.reviews
+  margin-top: 50px
+  padding: 80px 20px 60px 0px
+  background: lighten($teal, 25%)
+
+.review
+  color: white
+  padding: 30px
+
+.better-with-friends
   margin-bottom: 35px
   color: grey
